fix: ブックマークとライク機能のビューを調整

--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto px-4 py-2 bg-base-100 pb-20" style="padding-top: 70px;">
-  <h1 class="text-2xl font-bold mb-4">いいねした投稿</h1>
+<div class="container mx-auto px-4 py-2 bg-base-100 pb-20">
+  <h1 class="text-xm font-bold mb-2">いいねした投稿</h1>
 
   <% if @posts.present? %>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 justify-items-center">
