--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,14 @@
-<h2 class="text-3xl font-bold text-center mb-6">パスワードをお忘れですか？</h2>
-
-<p class="text-center mb-6">メールアドレスを入力すると、パスワードリセット用のリンクを送信します。</p>
+<h2 class="text-xl font-bold text-center mb-6">パスワードをお忘れですか？</h2>
 
 <%= form_with(model: resource, as: resource_name, url: password_path(resource_name)) do |f| %>
   <div class="form-control mb-6">
-    <%= f.label :email, class: "label" %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+    <%= f.label :email, "登録したメールアドレスを入力してください", class: "label text-sm" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered w-full bg-gray-100 focus:bg-white", placeholder: "メールアドレス" %>
   </div>
 
-  <div class="form-control">
-    <%= f.submit "パスワードリセットリンクを送信", class: "btn btn-primary w-full" %>
-  </div>
-<% end %>
-
-<div class="mt-4 text-center">
-  <%= link_to "ログインに戻る", new_session_path(resource_name), class: "link link-primary" %>
+  <div class="flex justify-center gap-4">
+  <%= link_to "ログインに戻る", new_session_path(resource_name), class: "btn btn-secondary text-base-100 w-32" %>
+  <%= f.submit "送信", class: "btn btn-primary text-base-100 w-32" %>
 </div>
+
+<% end %>
