--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,6 +1,6 @@
 <div class="join text-xs mt-8 mx-auto flex justify-center">
   <%= paginator.render do -%>
-    <nav class="pagination" role="navigation" aria-label="pager" style="margin-top: 20px; margin-bottom: 20px;">
+    <nav class="pagination" role="navigation" aria-label="pager" style="margin-bottom: 50px;">
       <%= prev_page_tag unless current_page.first? %>
       <% each_page do |page| -%>
         <% if page.display_tag? -%>
