--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,25 +1,22 @@
-<h1 class="text-3xl font-bold mb-4">パスワード変更</h1>
+<h1 class="text-xl font-bold mb-4">パスワード変更</h1>
 
 <%= form_with(model: @user, url: update_password_path, method: :patch, local: true) do |f| %>
 
   <div class="form-control mb-4">
-    <%= f.label :current_password, "現在のパスワード", class: "label" %>
-    <%= f.password_field :current_password, autocomplete: "current-password", class: "input input-bordered w-full", placeholder: "現在のパスワードを入力してください" %>
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "input input-bordered text-xs", placeholder: "現在のパスワード（4文字以上）" %>
   </div>
 
   <div class="form-control mb-4">
-    <%= f.label :password, "新しいパスワード", class: "label" %>
-    <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered w-full", placeholder: "4文字以上の新しいパスワードを入力してください" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered text-xs", placeholder: "新しいパスワード(4文字以上)" %>
   </div>
 
   <div class="form-control mb-6">
-    <%= f.label :password_confirmation, "新しいパスワードの確認", class: "label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full", placeholder: "新しいパスワードをもう一度入力してください" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered text-xs", placeholder: "新しいパスワード（再確認）" %>
   </div>
 
-  <%= f.submit "パスワードを変更", class: "btn btn-primary w-full" %>
-<% end %>
-
-<div class="mt-4 text-center">
-  <%= link_to "マイページに戻る", mypage_path, class: "link link-primary" %>
+  <div class="flex space-x-4 justify-center">
+  <%= link_to "マイページに戻る", mypage_path, class: "btn btn-secondary text-lg text-base-100" %>
+  <%= f.submit "パスワードを変更", class: "btn btn-primary text-lg text-base-100" %>
 </div>
+
+<% end %>
