--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,55 @@
-<div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg p-8">
+<div class="flex flex-col items-center text-sm space-y-2">
+  <% if @user.profile_image.present? %>
+    <%= image_tag @user.profile_image.url, 
+      alt: @user.username, 
+      style: "border-radius: 50%; width: 4rem; height: 4rem;" %>
+  <% else %>
+    <%= image_tag "default_profile_image.svg", 
+      alt: @user.username, 
+      style: "border-radius: 50%; width: 4rem; height: 4rem;" %>
+  <% end %>
 
-  <div class="flex flex-col items-center" style= "padding-bottom: 30px;">
-    <% if @user.profile_image.present? %>
-      <%= image_tag @user.profile_image.url, 
-        alt: @user.username, 
-        style: "border-radius: 50%; width: 8rem; height: 8rem; object-fit: cover; margin-bottom: 1rem;" %>
-    <% else %>
-      <%= image_tag "default_profile_image.svg", 
-        alt: @user.username, 
-        style: "border-radius: 50%; width: 8rem; height: 8rem; object-fit: cover; margin-bottom: 1rem;" %>
-    <% end %>
+  <h2 class="text-lg font-medium mb-1"><%= @user.username %></h2>
 
-    <h2 class="text-2xl font-semibold mb-2"><%= @user.username %></h2>
-
-    <p class="text-gray-700 mb-1">
+  <div class="text-xs space-y-1">
+    <p class="text-gray-600">
       <strong>ランニングの目的:</strong>
       <%= @user.running_goal.present? ? @user.running_goal : '未設定' %>
     </p>
 
-    <p class="text-gray-700 mb-1">
+    <p class="text-gray-600">
       <strong>ランニングの目標:</strong>
       <%= @user.running_specs.present? ? @user.running_specs : '未設定' %>
     </p>
 
-    <p class="text-gray-700 mb-4 text-center">
-      <strong>自己紹介:</strong><br>
+    <p class="text-gray-600 text-center">
+      <strong>自己紹介:</strong>
       <%= @user.bio.present? ? simple_format(@user.bio) : '未設定' %>
     </p>
 
     <% if @user.reference_url1.present? %>
-      <a href="<%= @user.reference_url1 %>" target="_blank" class="text-blue-500 hover:underline mb-4">
+      <a href="<%= @user.reference_url1 %>" target="_blank" class="text-blue-400 hover:underline">
         SNSやブログ等のリンクはこちら
       </a>
     <% end %>
   </div>
+
+  <div class="flex space-x-2">
+    <%= link_to 'プロフィールを編集', edit_profile_path, class: "btn btn-primary btn-xs text-base-100" %>
+    <%= link_to 'パスワードを変更', edit_password_path, class: "btn btn-secondary btn-xs text-base-100" %>
+  </div>
 </div>
 
-<div class="max-w-4xl mx-auto mt-2">
-  <% if @posts.any? %>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      <% @posts.each do |post| %>
-        <%= render 'posts/post_card', post: post %>
-      <% end %>
-    </div>
-  <% else %>
-    <p class="text-gray-600">まだ投稿がありません。</p>
-  <% end %>
-</div>
+
+<!-- 区切り線 -->
+<hr class="my-6 border-gray-300">
+
+<% if @user.posts.any? %>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+    <% @user.posts.each do |post| %>
+      <%= render 'posts/post_card', post: post %>
+    <% end %>
+  </div>
+<% else %>
+  <p class="text-gray-600">まだ投稿がありません。</p>
+<% end %>
