ユーザープロフィール画面のレイアウト変更

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
       alt: @user.username, 
       style: "border-radius: 50%; width: 4rem; height: 4rem;" %>
   <% else %>
-    <%= image_tag "default_profile_image.svg", 
+    <%= image_tag "default_profile_image.png", 
       alt: @user.username, 
       style: "border-radius: 50%; width: 4rem; height: 4rem;" %>
   <% end %>
