--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to page, url, class: "join-item btn #{'btn-active' if page.current?}", remote: true, rel: page.rel %>
+<%= link_to page, url, class: "join-item btn btn-sm #{'btn-primary text-white' if page.current?}", remote: true, rel: page.rel %>
