--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,28 +1,28 @@
 <div class="container mx-auto px-4 py-1">
 
-<%= form_with model: @post, local: true, html: { class: "space-y-6", style: "padding-bottom: 100px", multipart: true } do |form| %>
- 
-  <!-- カテゴリー選択 -->
-  <div class="form-control">
-    <label class="label text-xs">カテゴリーを選択してください</label>
-    <div class="carousel carousel-center space-x-2 overflow-x-auto" id="category-container">
-      <% Category.all.each do |category| %>
-        <div class="carousel-item">
-          <span
-            class="category-button badge badge-neutral cursor-pointer select-none"
-            data-category-id="<%= category.id %>">
-            <%= category.name %>
-          </span>
-        </div>
-      <% end %>
+  <%= form_with model: @post, local: true, html: { class: "space-y-6 pb-24", multipart: true } do |form| %>
+   
+    <!-- カテゴリー選択 -->
+    <div class="form-control">
+      <label class="label text-gray-600 text-xs">カテゴリーを選択してください</label>
+      <div class="carousel carousel-center space-x-2 overflow-x-auto" id="category-container">
+        <% Category.all.each do |category| %>
+          <div class="carousel-item text-center">
+            <span
+              class="category-button badge badge-neutral cursor-pointer select-none"
+              data-category-id="<%= category.id %>">
+              <%= category.name %>
+            </span>
+          </div>
+        <% end %>
+      </div>
+      <!-- 選択されたカテゴリーの hidden field -->
+      <%= form.hidden_field :category_id, id: "selected-category-id", value: @post.category_id %>
     </div>
-    <!-- 選択されたカテゴリーの hidden field -->
-    <%= form.hidden_field :category_id, id: "selected-category-id", value: @post.category_id %>
-  </div>
 
     <!-- タグ選択 -->
     <div class="form-control">
-      <label class="label text-xs">タグ</label>
+      <label class="label text-gray-600 text-xs">タグ</label>
 
       <!-- 標準タグカルーセル -->
       <div class="carousel carousel-center space-x-2 overflow-x-auto" id="standard-tags-container">
@@ -84,8 +84,8 @@
 
     <!-- 送信ボタン -->
     <div class="flex justify-end space-x-2 mt-4">
-      <%= link_to "キャンセル", cancel_path, class: "btn btn-secondary btn-xs text-base-100 text-xs" %>
-      <%= form.submit submit_button_text, class: "btn btn-primary btn-xs text-base-100 text-xs" %>
+      <%= link_to "キャンセル", cancel_path, class: "btn btn-secondary text-base-100" %>
+      <%= form.submit submit_button_text, class: "btn btn-primary text-base-100" %>
     </div>
   <% end %>
 </div>
