--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,10 +5,10 @@
       <% if @post.user.profile_image.present? %>
         <%= image_tag @post.user.profile_image.url, alt: @post.user.username, class: "w-10 h-10 rounded-full mr-2" %>
       <% else %>
-        <%= image_tag "default_profile_image.svg", alt: @post.user.username, class: "w-10 h-10 rounded-full mr-2" %>
+        <%= image_tag "default_profile_image.png", alt: @post.user.username, class: "w-10 h-10 rounded-full mr-2" %>
       <% end %>
       <div>
-        <p class="text-sm font-semibold "><%= @post.user.username %></p>
+        <p class="text-sm font-semibold text-gray-700"><%= @post.user.username %></p>
         <p class="text-xs text-gray-500"><%= @post.created_at.strftime("%Y年%m月%d日") %></p>
       </div>
     <% end %>
@@ -16,11 +16,11 @@
     <!-- 編集・削除リンク -->
     <% if @post.user == current_user %>
       <div class="flex space-x-2">
-        <%= link_to '編集', edit_post_path(@post), class: "btn btn-primary text-base-100", style: "padding: 0.1rem 0.8rem; font-size: 0.75rem;" %>
-        <%= link_to '削除', post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: "btn btn-secondary text-base-100", style: "padding: 0.1rem 0.8rem; font-size: 0.75rem;" %>
+        <%= link_to '編集', edit_post_path(@post), class: "btn btn-primary text-base-100 px-3 py-0.5 text-xs italic" %>
+        <%= link_to '削除', post_path(@post), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: "btn btn-secondary text-base-100 px-3 py-0.5 text-xs italic" %>
       </div>
     <% end %>
-    </div>
+  </div>
 
   <!-- 投稿画像とカテゴリ -->
   <div class="relative mb-4 flex justify-center">
@@ -31,16 +31,15 @@
     <% end %>
 
     <% if @post.category.present? %>
-      <div class="absolute top-2 left-2 bg-primary text-base-100 text-xs px-2 py-1 rounded-full shadow-sm" style="background-color: orange;">
+      <div class="absolute top-2 left-2 bg-accent text-white text-xs px-2 py-1 rounded-full shadow-sm">
         <%= @post.category.name %>
       </div>
     <% end %>
   </div>
   
-  <!-- アクションボタン（Like,Bookmark） -->
+  <!-- アクションボタン（Like, Bookmark） -->
   <div class="flex items-center justify-between mb-2">
     <div class="flex space-x-2">
-
       <!-- いいねボタン -->
       <div class="flex items-center space-x-1">
         <%= render 'likes/like_buttons', post: @post %>
@@ -54,7 +53,7 @@
   </div>  
   
   <!-- 投稿タイトル -->
-  <h2 class="text-lg font-bold mb-1"><%= @post.title %></h2>
+  <h3 class="text-lg text-gray-700 font-semibold mb-2"><%= @post.title %></h3>
   
   <!-- 投稿内容 -->
   <h3 class="text-sm text-gray-700 mb-1"><%= simple_format(@post.content) %></h3>
@@ -72,7 +71,7 @@
   <!-- タグ -->
   <div class="flex flex-wrap gap-2 mt-4 mb-4">
     <% @post.tags.each do |tag| %>
-      <span class="bg-base-100 text-xs px-2 py-1 rounded-full shadow-sm">#<%= tag.name %></span>
+      <span class="bg-blue-100 text-gray-700 text-xs px-2 py-1 rounded-full shadow-sm">#<%= tag.name %></span>
     <% end %>
   </div>
 
@@ -89,7 +88,6 @@
             <% else %>
               <%= image_tag "default_profile_image.svg", alt: comment.user.username, class: "w-6 h-6 rounded-full mr-2" %>
             <% end %>
-            <span class="font-semibold"><%= comment.user.username %>:</span>
           <% end %>
           <span><%= comment.content %></span>
         </div>
@@ -112,11 +110,10 @@
       </div>
     <% end %>
   </div>
-<% else %>
-  <!-- ログインを促すリンク -->
-  <p class="text-sm text-center mt-4">
-    <%= link_to 'コメントするにはログインが必要です', new_user_session_path, class: "text-blue-500 hover:underline" %>
-  </p>
-    <% end %>
-  </div>  
+  <% else %>
+    <!-- ログインを促すリンク -->
+    <p class="text-sm text-center mt-4">
+      <%= link_to 'コメントするにはログインが必要です', new_user_session_path, class: "text-primary underline hover:text-primary-dark" %>
+    </p>
+  <% end %>
 </div>
