--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,22 +1,34 @@
-<h1 class="text-xl font-bold mb-4">パスワード変更</h1>
+<div class="container mx-auto max-w-md px-4 py-6 bg-white shadow-md rounded-lg">
+  <h1 class="text-xl font-bold mb-6 text-center text-gray-700">パスワード変更</h1>
 
-<%= form_with(model: @user, url: update_password_path, method: :patch, local: true) do |f| %>
+  <%= form_with(model: @user, url: update_password_path, method: :patch, local: true) do |f| %>
+    <!-- 現在のパスワード -->
+    <div class="form-control mb-4">
+      <%= f.password_field :current_password, autocomplete: "current-password", 
+        class: "input input-bordered w-full bg-gray-100 focus:bg-white text-xs", 
+        placeholder: "現在のパスワード（4文字以上）" %>
+    </div>
 
-  <div class="form-control mb-4">
-    <%= f.password_field :current_password, autocomplete: "current-password", class: "input input-bordered text-xs", placeholder: "現在のパスワード（4文字以上）" %>
-  </div>
+    <!-- 新しいパスワード -->
+    <div class="form-control mb-4">
+      <%= f.password_field :password, autocomplete: "new-password", 
+        class: "input input-bordered w-full bg-gray-100 focus:bg-white text-xs", 
+        placeholder: "新しいパスワード（4文字以上）" %>
+    </div>
 
-  <div class="form-control mb-4">
-    <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered text-xs", placeholder: "新しいパスワード(4文字以上)" %>
-  </div>
+    <!-- 新しいパスワード確認 -->
+    <div class="form-control mb-6">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", 
+        class: "input input-bordered w-full bg-gray-100 focus:bg-white text-xs", 
+        placeholder: "新しいパスワード（再確認）" %>
+    </div>
 
-  <div class="form-control mb-6">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered text-xs", placeholder: "新しいパスワード（再確認）" %>
-  </div>
-
-  <div class="flex space-x-4 justify-center">
-  <%= link_to "マイページに戻る", mypage_path, class: "btn btn-secondary text-lg text-base-100" %>
-  <%= f.submit "パスワードを変更", class: "btn btn-primary text-lg text-base-100" %>
+    <!-- ボタン -->
+    <div class="flex space-x-4 justify-center">
+      <%= link_to "マイページに戻る", mypage_path, 
+        class: "btn btn-secondary text-sm text-base-100 px-6 py-2" %>
+      <%= f.submit "パスワードを変更", 
+        class: "btn btn-primary text-sm text-base-100 px-6 py-2" %>
+    </div>
+  <% end %>
 </div>
-
-<% end %>
